--- a/app/assets/stylesheets/post_item.css
+++ b/app/assets/stylesheets/post_item.css
@@ -52,7 +52,7 @@
 .post-item-name-and-options {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: flex-start;
   width: 444px;
   height: 19px;
   margin-bottom: 2px;
