--- a/app/assets/stylesheets/edit_post.css
+++ b/app/assets/stylesheets/edit_post.css
@@ -4,8 +4,7 @@
   z-index: 3;
   position: absolute;
   top: 100px;
-  left: 50%;
-  margin-left: -220px;
+  left: -43px;
 }
 
 .edit-post-modal-screen {
@@ -126,5 +125,5 @@
   display: flex;
   align-items: center;
   justify-content: flex-end;
-  margin-left: 200px;
+  margin-left: 228px;
 }
