--- a/app/assets/stylesheets/edit_post.css
+++ b/app/assets/stylesheets/edit_post.css
@@ -88,6 +88,24 @@
   background-color: white;
 }
 
+.edit-post-upload-label-hidden {
+  display: none;
+}
+
+.edit-post-upload-label {
+  width: 600px;
+  background-color: white;
+  cursor: pointer;
+}
+
+.edit-post-upload-label:hover {
+  background-color: #f6f7f9;
+}
+
+.edit-post-upload-btn input[type="file"] {
+  display: none;
+}
+
 .edit-post-footer {
   width: 600px;
   height: 40px;
