Add styling to edit post upload btn

--- a/app/assets/stylesheets/edit_post.css
+++ b/app/assets/stylesheets/edit_post.css
@@ -96,6 +96,10 @@
   width: 600px;
   background-color: white;
   cursor: pointer;
+  display: flex;
+  font-size: 14px;
+  align-items: center;
+  justify-content: center;
 }
 
 .edit-post-upload-label:hover {
