--- a/app/assets/stylesheets/comments.scss
+++ b/app/assets/stylesheets/comments.scss
@@ -62,3 +62,40 @@
     display: none;
   }
 }
+
+.comment-list {
+  list-style: none;
+}
+
+.comment-list-item {
+  border-left: 1px solid rgb(225, 226, 227);
+  border-right: 1px solid rgb(225, 226, 227);
+  background-color: ;
+  width: ;
+  min-height: ;
+  margin: ;
+  padding: ;
+  box-sizing: border-box;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+.comment-body-container {
+  max-width: ;
+  background-color: white;
+  border-radius: 18px;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+.comment-name {
+  font-size: ;
+  color: ;
+}
+
+.comment-body {
+  font-size: 13px;
+  color: rgb(29, 33, 41);
+}
