--- a/app/assets/stylesheets/edit_post.scss
+++ b/app/assets/stylesheets/edit_post.scss
@@ -152,5 +152,6 @@
   display: flex;
   align-items: center;
   justify-content: flex-end;
-  margin-left: 228px;
+  position: absolute;
+  right: 8px;
 }
