--- a/app/assets/stylesheets/comments.scss
+++ b/app/assets/stylesheets/comments.scss
@@ -109,6 +109,14 @@
   color: rgb(54, 88, 153);
 }
 
+#comment-date {
+  margin-left: 12px;
+}
+
+.comment-name:hover {
+  text-decoration: underline;
+}
+
 .comment-body {
   color: rgb(29, 33, 41);
 }
