--- a/app/assets/stylesheets/comments.scss
+++ b/app/assets/stylesheets/comments.scss
@@ -155,6 +155,44 @@
 }
 
 .comment-body-img {
-  max-width: 60px;
-  max-height: 60px;
+  width: 60px;
+  height: 60px;
+}
+
+.comment-cancel-upload-btn {
+  height: 130px;
+
+  span {
+    background-color: black;
+    opacity: 0;
+    width: 60px;
+    height: 60px;
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-start;
+    position: relative;
+    top: -115px;
+    left: 12px;
+  }
+
+  span:hover {
+    opacity: 0.5;
+    background-color: black;
+    width: 100px;
+    height: 100px;
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-start;
+    position: relative;
+    top: -115px;
+    left: 12px;
+  }
+
+  span:hover i {
+    color: red;
+    cursor: pointer;
+    margin-top: 3px;
+    margin-right: 3px;
+    z-index: 3;
+  }
 }
