Fix double posting edited comments

--- a/app/assets/stylesheets/comments.scss
+++ b/app/assets/stylesheets/comments.scss
@@ -33,7 +33,7 @@
 .comment-img-preview {
   width: 60px;
   height: 60px;
-  border-radius: 10px;
+  border-radius: 16px;;
 }
 
 .comment-input {
@@ -163,7 +163,7 @@
 .comment-body-img {
   width: 60px;
   height: 60px;
-  border-radius: 10px;
+  border-radius: 16px;;
 }
 
 .comment-cancel-upload-btn {
@@ -181,7 +181,7 @@
     position: relative;
     top: -115px;
     left: 12px;
-    border-radius: 10px;
+    border-radius: 16px;;
   }
 
   span:hover {
@@ -195,7 +195,7 @@
     position: relative;
     top: -65px;
     left: 12px;
-    border-radius: 10px;
+    border-radius: 16px;;
   }
 
   span:hover i {
