--- a/app/assets/stylesheets/comments.scss
+++ b/app/assets/stylesheets/comments.scss
@@ -14,13 +14,13 @@
   margin-bottom: 13px;
 }
 
-.comment-img-preview-container {
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  max-height: 100px;
-  margin: 5px 0 5px 12px;
-}
+// .comment-img-preview-container {
+//   display: flex;
+//   justify-content: flex-start;
+//   align-items: center;
+//   max-height: 100px;
+//   margin: 5px 0 5px 12px;
+// }
 
 .comment-img {
   border-radius: 50%;
@@ -31,9 +31,21 @@
 }
 
 .comment-img-preview {
-  width: 60px;
-  height: 60px;
-  border-radius: 16px;;
+  width: 80px;
+  height: 80px;
+  margin-left: 5px;
+}
+
+.comment-img-preview-box {
+  background-color: white;
+  border: 1px solid rgb(221, 223, 226);
+  width: 454px;
+  height: 92px;
+  box-sizing: border-box;
+  margin-top: 4px;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
 }
 
 .comment-input {
@@ -50,6 +62,25 @@
   -webkit-box-shadow: none;
   -moz-box-shadow: none;
   box-shadow: none;
+
+  // i {
+  //   color: rgb(225, 226, 227);
+  //   font-size: 12px;
+  //   margin-right: 8px;
+  // }
+  //
+  // i:hover {
+  //   cursor: pointer;
+  //   color: rgb(29, 33, 41);
+  // }
+  //
+  // button {
+  //   display: none;
+  // }
+}
+
+.comment-img-preview-box-hidden {
+  display: none;
 }
 
 .comment-box {
@@ -161,48 +192,48 @@
 }
 
 .comment-body-img {
-  width: 60px;
-  height: 60px;
+  width: 80px;
+  height: 80px;
   border-radius: 16px;;
 }
 
-.comment-cancel-upload-btn {
-  height: 60px;
-  margin: 5px 0;
-
-  span {
-    background-color: black;
-    opacity: 0;
-    width: 60px;
-    height: 60px;
-    display: flex;
-    justify-content: flex-end;
-    align-items: flex-start;
-    position: relative;
-    top: -115px;
-    left: 12px;
-    border-radius: 16px;;
-  }
-
-  span:hover {
-    opacity: 0.5;
-    background-color: black;
-    width: 60px;
-    height: 60px;
-    display: flex;
-    justify-content: flex-end;
-    align-items: flex-start;
-    position: relative;
-    top: -65px;
-    left: 12px;
-    border-radius: 16px;;
-  }
-
-  span:hover i {
-    color: red;
-    cursor: pointer;
-    margin-top: 3px;
-    margin-right: 3px;
-    z-index: 3;
-  }
-}
+// .comment-cancel-upload-btn {
+//   height: 60px;
+//   margin: 5px 0;
+//
+//   span {
+//     background-color: black;
+//     opacity: 0;
+//     width: 80px;
+//     height: 80px;
+//     display: flex;
+//     justify-content: flex-end;
+//     align-items: flex-start;
+//     position: relative;
+//     top: -115px;
+//     left: 12px;
+//     border-radius: 16px;;
+//   }
+//
+//   span:hover {
+//     opacity: 0.5;
+//     background-color: black;
+//     width: 60px;
+//     height: 60px;
+//     display: flex;
+//     justify-content: flex-end;
+//     align-items: flex-start;
+//     position: relative;
+//     top: -65px;
+//     left: 12px;
+//     border-radius: 16px;;
+//   }
+//
+//   span:hover i {
+//     color: red;
+//     cursor: pointer;
+//     margin-top: 3px;
+//     margin-right: 3px;
+//     z-index: 3;
+//   }
+// }
