--- a/app/assets/stylesheets/comments.scss
+++ b/app/assets/stylesheets/comments.scss
@@ -14,14 +14,6 @@
   margin-bottom: 13px;
 }
 
-// .comment-img-preview-container {
-//   display: flex;
-//   justify-content: flex-start;
-//   align-items: center;
-//   max-height: 100px;
-//   margin: 5px 0 5px 12px;
-// }
-
 .comment-img {
   border-radius: 50%;
   width: 32px;
@@ -46,6 +38,24 @@
   display: flex;
   align-items: center;
   justify-content: flex-start;
+  position: relative;
+
+  i {
+    position: absolute;
+    top: 4px;
+    right: 4px;
+    padding: 5px;
+    font-size: 14px;
+    color: rgb(29, 33, 41);
+    opacity: .5;
+    font-weight: 400;
+  }
+
+  i:hover {
+    background-color: #365899;
+    cursor: pointer;
+    color: white;
+  }
 }
 
 .comment-input {
@@ -62,21 +72,6 @@
   -webkit-box-shadow: none;
   -moz-box-shadow: none;
   box-shadow: none;
-
-  // i {
-  //   color: rgb(225, 226, 227);
-  //   font-size: 12px;
-  //   margin-right: 8px;
-  // }
-  //
-  // i:hover {
-  //   cursor: pointer;
-  //   color: rgb(29, 33, 41);
-  // }
-  //
-  // button {
-  //   display: none;
-  // }
 }
 
 .comment-img-preview-box-hidden {
@@ -196,44 +191,3 @@
   height: 80px;
   border-radius: 16px;;
 }
-
-// .comment-cancel-upload-btn {
-//   height: 60px;
-//   margin: 5px 0;
-//
-//   span {
-//     background-color: black;
-//     opacity: 0;
-//     width: 80px;
-//     height: 80px;
-//     display: flex;
-//     justify-content: flex-end;
-//     align-items: flex-start;
-//     position: relative;
-//     top: -115px;
-//     left: 12px;
-//     border-radius: 16px;;
-//   }
-//
-//   span:hover {
-//     opacity: 0.5;
-//     background-color: black;
-//     width: 60px;
-//     height: 60px;
-//     display: flex;
-//     justify-content: flex-end;
-//     align-items: flex-start;
-//     position: relative;
-//     top: -65px;
-//     left: 12px;
-//     border-radius: 16px;;
-//   }
-//
-//   span:hover i {
-//     color: red;
-//     cursor: pointer;
-//     margin-top: 3px;
-//     margin-right: 3px;
-//     z-index: 3;
-//   }
-// }
