--- a/app/assets/stylesheets/post_form.scss
+++ b/app/assets/stylesheets/post_form.scss
@@ -243,34 +243,39 @@
 }
 
 .post-form-error-container {
-  width: ;
-  height: ;
-  border: ;
+  width: 900px;
+  height: 131px;
   position: absolute;
   top: 100px;
   left: 50%;
 }
 
 .post-form-error-header {
-  padding: ;
-  border-bottom: ;
-  font-size: ;
-  font-weight: ;
-  color: ;
-  background-color: ;
+  padding: 10px 12px;
+  border-bottom: 1px solid rgb(229, 229, 229);
+  font-size: 14px;
+  font-weight: 700;
+  color: rgb(29, 33, 41);
+  background-color: rgb(246, 247, 249);
 }
 
 .post-form-error-body {
-  padding: ;
-  border-bottom: ;
-  font-size: ;
-  font-weight: ;
-  color: ;
-  background-color: ;
+  padding: 12px;
+  border-bottom: 1px solid rgb(229, 229, 229);
+  font-size: 14px;
+  font-weight: 400;
+  color: rgb(29, 33, 41);
+  background-color: white;
+  width: 876px;
+  height: 18px;
 }
 
 .post-form-error-footer {
   display: flex;
   align-items: center;
   justify-content: flex-end;
+  width: 876px;
+  height: 24px;
+  margin: 0 12px;
+  padding: 12px 0;
 }
