--- a/app/assets/stylesheets/post_form.scss
+++ b/app/assets/stylesheets/post_form.scss
@@ -242,12 +242,18 @@
   display: none;
 }
 
+.post-form-error-show {
+  position: relative;
+  z-index: 5;
+}
+
 .post-form-error-container {
   width: 900px;
   height: 131px;
   position: absolute;
-  top: 100px;
-  left: 50%;
+  top: 50px;
+  left: -200px;
+  background-color: white;
 }
 
 .post-form-error-header {
@@ -261,7 +267,6 @@
 
 .post-form-error-body {
   padding: 12px;
-  border-bottom: 1px solid rgb(229, 229, 229);
   font-size: 14px;
   font-weight: 400;
   color: rgb(29, 33, 41);
@@ -278,4 +283,5 @@
   height: 24px;
   margin: 0 12px;
   padding: 12px 0;
+  border-top: 1px solid rgb(229, 229, 229);
 }
