--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -4,7 +4,31 @@
   height: 42px;
   display: flex;
   align-items: center;
+  // justify-content: flex-start;
+
+  position: relative;
+  // display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  // align-items: center;
+  // width: 950px;
+  margin: 0 auto;
+  border-bottom: 1px solid black;
+}
+
+.left-nav {
+  display: flex;
+  align-items: center;
   justify-content: flex-start;
+  position: relative;
+  // left: 30px;
+}
+
+.right-nav {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  // margin-left: 450px;
 }
 
 .main-nav-bar p {
@@ -107,21 +131,6 @@
   height: 24px;
   border-radius: 50%;
   cursor: pointer;
-}
-
-.left-nav {
-  display: flex;
-  align-items: center;
-  justify-content: flex-start;
-  position: relative;
-  left: 30px;
-}
-
-.right-nav {
-  display: flex;
-  align-items: center;
-  justify-content: flex-start;
-  margin-left: 450px;
 }
 
 .newsfeed-btn {
