Fix profile styling

--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -16,7 +16,7 @@
   align-items: center;
   justify-content: flex-start;
   position: relative;
-  margin-left: calc((100vw - 851px) / 2);
+  margin-left: calc((100vw - 851px - 305px) / 2);
 }
 
 .right-nav {
