--- a/app/assets/stylesheets/profile.scss
+++ b/app/assets/stylesheets/profile.scss
@@ -1,3 +1,13 @@
+.profile-container-box {
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+}
+
+.messenger-and-games {
+  width: 305px;
+}
+
 .profile-post-index {
   width: 516px;
   margin-left: 13px;
