--- a/app/assets/stylesheets/profile.scss
+++ b/app/assets/stylesheets/profile.scss
@@ -23,18 +23,6 @@
   left: 215px;
 }
 
-.profile-name-container {
-  position: absolute;
-  top: 280px;
-  left: 215px;
-  background-color: black;
-  opacity: .3;
-  color: transparent;
-  font-size: 24px;
-  font-weight: 500;
-  box-shadow: 0px 0px 20px 8px black;
-}
-
 .profile-aside {
   width: 321px;
   margin-top: 13px;
@@ -91,6 +79,16 @@
   border-right: 1px solid rgba(0, 0, 0, 0.25);
   border-left: 1px solid rgba(0, 0, 0, 0.25);
   position: relative;
+
+  &:before {
+    content: "";
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    position: absolute;
+    background: linear-gradient(to top, rgba(0,0,0,.7), rgba(0,0,0,.3) -88%, transparent);
+  }
 }
 
 .profile-pic-preview {
