--- a/app/assets/stylesheets/profile.scss
+++ b/app/assets/stylesheets/profile.scss
@@ -69,7 +69,8 @@
   width: 321px;
   height: 350px;
   margin-bottom: 13px;
-  background-color: gray;
+  background-color: white;
+  border: 1px solid rgb(221, 223, 226);
 }
 
 .profile-body {
