--- a/app/assets/stylesheets/profile.scss
+++ b/app/assets/stylesheets/profile.scss
@@ -76,6 +76,9 @@
 .profile-friends-pic {
   width: 100px;
   height: 100px;
+  margin-left: 5px;
+  margin-top: 5px;
+  background: linear-gradient(to top, black, transparent);
 }
 
 .profile-friends-names {
@@ -83,8 +86,8 @@
   font-weight: 700;
   color: white;
   position: absolute;
-  bottom: 0;
-  left: 0;
+  bottom: 10px;
+  left: 10px;
 }
 
 .profile-friends-header {
@@ -99,6 +102,10 @@
 
 .profile-friends-list {
   list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-wrap: wrap;
 
   li {
     position: relative;
