--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -66,6 +66,11 @@
   font-weight: 700;
 }
 
+.mutual-friends {
+  font-weight: 400;
+  color: rgb(144, 148, 156);
+}
+
 .friend-dropdown-item {
   display: flex;
   justify-content: space-between;
@@ -78,6 +83,7 @@
   height: 48px;
   border-radius: 50%;
   cursor: pointer;
+  margin-right: 8px;
 }
 
 .friend-dropdown-header {
