--- a/app/assets/stylesheets/search_bar.scss
+++ b/app/assets/stylesheets/search_bar.scss
@@ -3,22 +3,26 @@
   box-sizing: border-box;
   width: 446px;
   border-radius: 2px;
-  margin: 0;
+  margin: 2px 0 0 0;
   padding: 0;
   background-color: white;
-  border-color: rgba(0, 0, 0, .15);
   box-shadow: 0 4px 6px 2px rgba(0, 0, 0, .10);
+  position: relative;
+  z-index: 2;
+}
+
+.search-results-container {
+  width: 400px;
 }
 
 .search-item {
   background-color: white;
   padding: 7px 8px;
-  color: rgb(29, 33, 41);
-  font-size: 14px;
+  border-radius: 2px;
 
   &:hover {
     cursor: pointer;
-    background-color: grey;
+    background-color: #e9ebee;
   }
 }
 
@@ -37,7 +41,7 @@
   font-size: 14px;
   font-weight: 400;
   box-sizing: border-box;
-  width: 388px;
+  width: 400px;
   height: 23px;
   padding-right: 5px;
   padding-left: 8px;
