--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -10,7 +10,8 @@
 <script type="text/javascript">
   window.staticImages = {
     navLogo: "<%= asset_url("nav_logo.png") %>",
-    beeperNub: "<%= asset_url("beeper_nub2.png") %>"
+    beeperNub: "<%= asset_url("beeper_nub2.png") %>",
+    trendIcon: "<%= asset_url("trend-icon.png") %>"
   }
 </script>
 
