--- a/app/assets/stylesheets/newsfeed.scss
+++ b/app/assets/stylesheets/newsfeed.scss
@@ -62,14 +62,13 @@
   border: 1px solid #dddfe2;
   border-radius: 3px;
   width: 308px;
-  height: 225px;
   box-sizing: border-box;
   padding: 12px;
 }
 .trending-header {
   display: flex;
   justify-content: flex-start;
-  align-items: center;
+  align-items: flex-start;
 }
 
 .trending-title {
@@ -88,13 +87,17 @@
 .trending-list {
   list-style: none;
   padding: 0;
-  margin: 0;
+  margin: 6px 0 0 0;
 
   li {
     display: flex;
     justify-content: flex-start;
     align-items: flex-start;
     margin-bottom: 4px;
+
+    a {
+      text-decoration: none;
+    }
   }
 }
 
@@ -106,6 +109,27 @@
 
 .article-source {
   color: #90949c;
+  font-size: 13px;
+}
+
+.icon-hover {
+  display: none;
+}
+
+.icon-container {
+  position: relative;
+}
+
+i:hover .icon-hover {
+  display: none;
+  background-color: black;
+  width: 100px;
+  height: 100px;
+  color: white;
+  font-size: 13px;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
 .trending-icons {
@@ -120,5 +144,10 @@
     padding: 4px;
     margin-right: 8px;
     cursor: pointer;
+  }
+
+  .icon-active {
+    color: rgb(66, 103, 178);
+    border-bottom: 1px solid rgb(66, 103, 178);
   }
 }
