--- a/app/assets/stylesheets/profile.scss
+++ b/app/assets/stylesheets/profile.scss
@@ -67,7 +67,6 @@
 
 .profile-friends {
   width: 321px;
-  height: 350px;
   margin-bottom: 13px;
   background-color: white;
   border: 1px solid rgb(221, 223, 226);
@@ -77,7 +76,7 @@
   width: 100px;
   height: 100px;
   margin-left: 5px;
-  margin-top: 5px;
+  margin-bottom: 5px;
   background: linear-gradient(to top, black, transparent);
 }
 
