--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -11,7 +11,8 @@
   window.staticImages = {
     navLogo: "<%= asset_url("nav_logo.png") %>",
     beeperNub: "<%= asset_url("beeper_nub2.png") %>",
-    trendIcon: "<%= asset_url("trend-icon.png") %>"
+    trendIcon: "<%= asset_url("trend-icon.png") %>",
+    linkNub: "<%= asset_url("beeper_nub3.png") %>"
   }
 </script>
 
