--- a/app/assets/stylesheets/post_item.scss
+++ b/app/assets/stylesheets/post_item.scss
@@ -4,6 +4,12 @@
   margin-top: 13px;
 }
 
+.scale-loader {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .wall-post-hidden {
   display: none;
 }
