--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -12,7 +12,8 @@
     navLogo: "<%= asset_url("nav_logo.png") %>",
     beeperNub: "<%= asset_url("beeper_nub2.png") %>",
     trendIcon: "<%= asset_url("trend-icon.png") %>",
-    linkNub: "<%= asset_url("beeper_nub3.png") %>"
+    linkNub: "<%= asset_url("beeper_nub3.png") %>",
+    linkIconNub: "<%= asset_url("link-icon-hover-nub.png") %>"
   }
 </script>
 
