--- a/app/assets/stylesheets/newsfeed.scss
+++ b/app/assets/stylesheets/newsfeed.scss
@@ -32,6 +32,7 @@
 }
 
 .newsfeed-li-name {
+  border-radius: 3px;
   display: flex;
   justify-content: flex-start;
   align-items: center;
@@ -39,6 +40,7 @@
 
 .newsfeed-li-name p {
   margin: 0;
+  color: black;
 }
 
 .newsfeed-sidebar-profile-pic {
