--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -13,7 +13,8 @@
     beeperNub: "<%= asset_url("beeper_nub2.png") %>",
     trendIcon: "<%= asset_url("trend-icon.png") %>",
     linkNub: "<%= asset_url("beeper_nub3.png") %>",
-    linkIconNub: "<%= asset_url("link-icon-hover-nub.png") %>"
+    linkIconNub: "<%= asset_url("link-icon-hover-nub.png") %>",
+    nameHoverNub: "<%= asset_url("beeper_nub4.png") %>"
   }
 </script>
 
