--- a/app/assets/stylesheets/newsfeed.scss
+++ b/app/assets/stylesheets/newsfeed.scss
@@ -22,13 +22,18 @@
   margin: 0;
 }
 
-.newsfeed-sidebar li {
+.newsfeed-to-profile {
   font-size: 12px;
   width: 184px;
   height: 29px;
-  border-radius: 1px;
+  border-radius: 3px;
   color: rgb(29, 33, 41);
   margin-bottom: 13px;
+
+  &:hover {
+    background-color: rgb(246, 247, 249);
+    cursor: pointer;
+  }
 }
 
 .newsfeed-li-name {
@@ -48,9 +53,4 @@
   width: 20px;
   height: 20px;
   margin: 4px;
-}
-
-.newsfeed-sidebar li:hover {
-  background-color: rgb(246, 247, 249);
-  cursor: pointer;
 }
