Add like btn styling

--- a/app/assets/stylesheets/post_item.scss
+++ b/app/assets/stylesheets/post_item.scss
@@ -154,6 +154,10 @@
   text-decoration: underline;
 }
 
+.liked {
+  color: rgb(64, 128, 255);
+}
+
 .comment-btn {
   display: flex;
   align-items: center;
