--- a/app/assets/stylesheets/post_item.scss
+++ b/app/assets/stylesheets/post_item.scss
@@ -4,6 +4,25 @@
   margin-top: 13px;
 }
 
+.post-likes-container {
+  border-top: 1px solid #e1e2e3;
+  background-color: rgb(242, 243, 245);
+  padding: 9px 12px;
+  font-size: 12px;
+  color: rgb(54, 88, 153);
+}
+
+.liker-names {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+
+  i {
+    color: rgb(64, 128, 255);
+    margin-right: 4px;
+  }
+}
+
 .scale-loader {
   display: flex;
   justify-content: center;
