--- a/app/views/static_pages/root.html.erb
+++ b/app/views/static_pages/root.html.erb
@@ -14,6 +14,7 @@
     trendIcon: "<%= asset_url("trend-icon.png") %>",
     linkNub: "<%= asset_url("beeper_nub3.png") %>",
     linkIconNub: "<%= asset_url("link-icon-hover-nub.png") %>",
+    likeHoverNub: "<%= asset_url("like-hover-nub.png") %>",
     nameHoverNub: "<%= asset_url("beeper_nub4.png") %>"
   }
 </script>
