--- a/app/assets/stylesheets/comments.scss
+++ b/app/assets/stylesheets/comments.scss
@@ -174,6 +174,26 @@
   color: rgb(54, 88, 153);
 }
 
+.comment-strong-like {
+  font-size: 12px;
+  font-weight: normal;
+  cursor: pointer;
+  margin-right: 2px;
+  color: rgb(54, 88, 153);
+
+  &:hover {
+    text-decoration: underline;
+  }
+}
+
+.comment-strong-date {
+  color: #90949c;
+  font-size: 12px;
+  font-weight: normal;
+  cursor: default;
+  margin-left: 4px;
+}
+
 #comment-date {
   margin-left: 12px;
 }
